css boilerplate added with external fonts

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-
+    <h1>Hello World!</h1>
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/24e03351cf.js" crossorigin="anonymous"></script>
