--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 
     <h1>Hello World!</h1>
+    <p>testing</p>
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/24e03351cf.js" crossorigin="anonymous"></script>
