--- a/index.html
+++ b/index.html
@@ -17,8 +17,47 @@
 
 <body>
 
-    <h1>Hello World!</h1>
-    <p>testing</p>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Diversity & Inclusion</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Intro</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tips</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Diversity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Inclusion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Links</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero -->
+    <section id="hero">
+        <div id="cover-text">
+            <h2>Quote</h2>
+            <h3>Author</h3>
+        </div>
+    </section>
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/24e03351cf.js" crossorigin="anonymous"></script>
