hero positioned better, but needs responsiveness and adjustments

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer>
+        <p>test</p>
+    </footer>
+
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/24e03351cf.js" crossorigin="anonymous"></script>
     <!-- Bootstrap JS Script-->
