footer not blocking main/body content

--- a/index.html
+++ b/index.html
@@ -59,8 +59,22 @@
         </div>
     </section>
 
+    <!-- Main Content -->
+    <main>
+        <section id="tips">
+            <div class="row">
+                <div class="col-12 col-l-6">test</div>
+                <div class="col-12 col-l-6">test</div>
+                <div class="col-12 col-l-6">test</div>
+                <div class="col-12 col-l-6">test</div>
+                <div class="col-12 col-l-6">test</div>
+                <div class="col-12 col-l-6">test</div>
+            </div>
+        </section>
+    </main>
+
     <!-- Footer -->
-    <footer>
+    <footer class="mt-auto">
         <p>test</p>
     </footer>
 
