basic content categories

--- a/index.html
+++ b/index.html
@@ -61,16 +61,40 @@
 
     <!-- Main Content -->
     <main>
+        <!-- Intro -->
+        <section id="intro">
+            <h2>Intro</h2>
+        </section>
+
+        <!-- Tips -->
         <section id="tips">
+            <h2>Tips</h2>
             <div class="row">
-                <div class="col-12 col-l-6">test</div>
-                <div class="col-12 col-l-6">test</div>
-                <div class="col-12 col-l-6">test</div>
-                <div class="col-12 col-l-6">test</div>
-                <div class="col-12 col-l-6">test</div>
-                <div class="col-12 col-l-6">test</div>
+                <div class="col-12 col-lg-6">test</div>
+                <div class="col-12 col-lg-6">test</div>
+                <div class="col-12 col-lg-6">test</div>
+                <div class="col-12 col-lg-6">test</div>
+                <div class="col-12 col-lg-6">test</div>
+                <div class="col-12 col-lg-6">test</div>
             </div>
         </section>
+
+        <!-- Diversity -->
+        <section id="diversity">
+            <h2>Diversity</h2>
+        </section>
+
+        <!-- Inclusion -->
+        <section id="inclusion">
+            <h2>Inclusion</h2>
+        </section>
+
+        <!-- Links -->
+        <section id="links">
+            <h2>Links</h2>
+        </section>
+
+
     </main>
 
     <!-- Footer -->
