intoduction basic responsiveness

--- a/index.html
+++ b/index.html
@@ -62,8 +62,18 @@
     <!-- Main Content -->
     <main>
         <!-- Intro -->
-        <section id="intro">
-            <h2>Intro</h2>
+        <section id="intro" class="container section">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2>Intro</h2>
+                </div>
+                <div class="col-12 col-lg-6">
+
+                </div>
+                <div class="col-12 col-lg-6">
+                    <img src="assets/images/intro-image.webp" alt="man in wheelchair handed a cup of coffee">
+                </div>
+            </div>
         </section>
 
         <!-- Tips -->
