margins improved layout

--- a/index.html
+++ b/index.html
@@ -63,15 +63,16 @@
     <main>
         <!-- Intro -->
         <section id="intro" class="container section">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-12 text-center">
                     <h2>Intro</h2>
                 </div>
                 <div class="col-12 col-lg-6">
-
+                    <p>example text here</p>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <img src="assets/images/intro-image.webp" alt="man in wheelchair handed a cup of coffee">
+                    <img src="assets/images/intro-image.webp" alt="man in wheelchair handed a cup of coffee"
+                        class="mx-auto d-block img-fluid">
                 </div>
             </div>
         </section>
@@ -105,7 +106,7 @@
                 <div class="col-12 text-center">
                     <h2>Links</h2>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
@@ -117,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
@@ -129,7 +130,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
@@ -141,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
@@ -153,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
@@ -165,7 +166,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
