--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main>
         <!-- Intro -->
         <section id="intro" class="container section">
-            <div class="row justify-content-center">
+            <div class="row">
                 <div class="col-12 text-center">
                     <h2>Intro</h2>
                 </div>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <img src="assets/images/intro-image.webp" alt="man in wheelchair handed a cup of coffee"
-                        class="mx-auto d-block img-fluid">
+                        class="img-fluid">
                 </div>
             </div>
         </section>
