--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="d-flex flex-column">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Diversity & Inclusion</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -78,7 +78,7 @@
         </section>
 
         <!-- Tips -->
-        <section id="tips">
+        <section id="tips" class="container section">
             <h2>Tips</h2>
             <div class="row">
                 <div class="col-12 col-lg-6">test</div>
@@ -91,12 +91,12 @@
         </section>
 
         <!-- Diversity -->
-        <section id="diversity">
+        <section id="diversity" class="container section">
             <h2>Diversity</h2>
         </section>
 
         <!-- Inclusion -->
-        <section id="inclusion">
+        <section id="inclusion" class="container section">
             <h2>Inclusion</h2>
         </section>
 
