--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body class="d-flex flex-column">
 
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbar" class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Diversity & Inclusion</a>
+            <a class="navbar-brand" href="index.html">Diversity & Inclusion</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -32,19 +32,19 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Intro</a>
+                        <a class="nav-link" href="#intro">Intro</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tips</a>
+                        <a class="nav-link" href="#tips">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Diversity</a>
+                        <a class="nav-link" href="#diversity">Diversity</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Inclusion</a>
+                        <a class="nav-link" href="#inclusion">Inclusion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Links</a>
+                        <a class="nav-link" href="#links">Links</a>
                     </li>
                 </ul>
             </div>
@@ -54,8 +54,8 @@
     <!-- Hero -->
     <section id="hero">
         <div id="cover-text">
-            <h2>Quote</h2>
-            <h3>Author</h3>
+            <h1 class="display-3">Quote</h1>
+            <p class="lead sub-heading-color display-6"><strong>Author</strong></p>
         </div>
     </section>
 
