--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
