centered intro image and content

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <img src="assets/images/intro-image.webp" alt="man in wheelchair handed a cup of coffee"
-                        class="img-fluid">
+                        class="img-fluid border-circle">
                 </div>
             </div>
         </section>
