fixed navbar to top

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="d-flex flex-column">
 
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg">
+    <nav id="navbar" class="navbar fixed-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Diversity & Inclusion</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <img src="assets/images/intro-image.webp" alt="man in wheelchair handed a cup of coffee"
-                        class="img-fluid border-circle">
+                        class="img-fluid img-border">
                 </div>
             </div>
         </section>
