--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
     <!-- Hero -->
     <section id="hero">
         <div id="cover-text">
-            <h1 class="display-3">Quote</h1>
-            <p class="lead sub-heading-color display-6"><strong>Author</strong></p>
+            <br>
+            <h1 class="display-3">"No culture can live, if it attempts to be exclusive.”</h1>
+            <p class="lead sub-heading-color display-6"><strong>Mahatma Gandhi</strong></p>
         </div>
     </section>
 
