introduction section content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diversity & Inclusion | Home</title>
 
 
     <!-- Bootstrap CSS Link -->
@@ -66,10 +66,34 @@
         <section id="intro" class="container section">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2>Intro</h2>
+                    <h2>Introduction</h2>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <p>example text here</p>
+                    <p>
+                        Diversity and Inclusion refers to, the range of people within a group, and that everyone within
+                        the group feels valued and accepted. The practices and tips on this website can help you meet
+                        the legal requirements within the Equality Act and discrimination law.
+                    </p>
+                    <p>
+                        The following are the protected characteristics against discrimination:
+                    </p>
+                    <ul>
+                        <li>Age</li>
+                        <li>Disability</li>
+                        <li>Gender Reassignment</li>
+                        <li>Marriage and Civil Partnership</li>
+                        <li>Pregnancy and Maternity</li>
+                        <li>Race</li>
+                        <li>Religion or Belief</li>
+                        <li>Sex</li>
+                        <li>Sexual Orientation</li>
+                    </ul>
+                    <p>
+                        As well as an legal requirement, diversity and inclusion practices within an organisation can
+                        help lower the risk of; bullying, harrassment, and discrimination. When people are valued and an
+                        effort is made to include them, they are happier within your organisation and are more
+                        productive.
+                    </p>
                 </div>
                 <div class="col-12 col-lg-6">
                     <img src="assets/images/intro-image.webp" alt="man in wheelchair handed a cup of coffee"
