tips section content

--- a/index.html
+++ b/index.html
@@ -105,13 +105,68 @@
         <!-- Tips -->
         <section id="tips" class="container section">
             <h2>Tips</h2>
+            <p>
+                The following are some tips to help you create a more diverse and inclusive environment within your
+                organisation:
+            </p>
+            <!-- acas website as source for tips -->
             <div class="row">
-                <div class="col-12 col-lg-6">test</div>
-                <div class="col-12 col-lg-6">test</div>
-                <div class="col-12 col-lg-6">test</div>
-                <div class="col-12 col-lg-6">test</div>
-                <div class="col-12 col-lg-6">test</div>
-                <div class="col-12 col-lg-6">test</div>
+                <div class="col-12 col-lg-6">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>Workplace policy</h3>
+                            <ul>
+                                <li>The business supports and treats everyone fairly.</li>
+                                <li>What kind of behaviour is expected of them.</li>
+                                <li>About discrimination and the law, and what is not acceptable.</li>
+                                <li>Where to find the procedures for resolving any problems.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>Action plan</h3>
+                            <ul>
+                                <li>Staff training, and what is expected from them to ensure policies work.</li>
+                                <li>Monitoring and measuring if the policy (and the action plan) is working as intended,
+                                    and making records of this.</li>
+                                <li>Clear policy goals, and procedures to change the policies if they don't meet
+                                    expectations.</li>
+                                <li>Who puts the policy into practice.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>Recruitment</h3>
+                            <ul>
+                                <li>Advertise in at least two different places.</li>
+                                <li>Split recruitment requirements into; essentials, and desirables.</li>
+                                <li>Welcome all applications from those who believe they meet the essential
+                                    requirements.</li>
+                                <li>Consider and implement "positive action" for anyone under-represented in the
+                                    organisation.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>Communication</h3>
+                            <ul>
+                                <li>Talk openly with all organisation members.</li>
+                                <li>Current state of the organisation meetings.</li>
+                                <li>Clear communication about changes, decisions, or plans.</li>
+                                <li>Open topic meetings to meet and ask senior staff questions.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
