copyright in footer

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
     <!-- Footer -->
     <footer class="mt-auto">
-        <p>test</p>
+        <p><i class="fa-regular fa-copyright"></i> Mark Randall - 2025</p>
     </footer>
 
     <!-- Font Awesome kit -->
