acas link content

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                 <div class="col-12 col-lg-6">
                     <div class="row">
                         <div class="col-12">
-                            <h3>Workplace policy</h3>
+                            <h3>Organisation policy</h3>
                             <ul>
-                                <li>The business supports and treats everyone fairly.</li>
+                                <li>The organisation supports and treats everyone fairly.</li>
                                 <li>What kind of behaviour is expected of them.</li>
                                 <li>About discrimination and the law, and what is not acceptable.</li>
                                 <li>Where to find the procedures for resolving any problems.</li>
@@ -194,7 +194,22 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
+                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="/assets/images/acas logo.webp" class="card-img-top" alt="acas logo">
+                        <div class="card-body">
+                            <h5 class="card-title">ACAS</h5>
+                            <p class="card-text">The Advisory, Conciliation and Arbitration Service.
+                            </p>
+                            <p class="card-text">We work with millions of employers and employees every year to improve
+                                workplace relationships. We're an independent public body that receives funding from the
+                                government.</p>
+                            <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" target="_blank"
+                                class="btn custom-button-outline">ACAS Diversity & Inclusivity</a>
                         </div>
                     </div>
                 </div>
@@ -206,7 +221,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
+                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -218,7 +233,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
+                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -230,7 +245,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
+                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -242,19 +257,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of
                                 the card's content.</p>
-                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn custom-button-outline">Go somewhere</a>
+                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
                         </div>
                     </div>
                 </div>
