equalities office link

--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/assets/images/equalities-office.webp" class="card-img-top" alt="uk government equalities office logo">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
+                            <h5 class="card-title">Equality Act 2010</h5>
+                            <p class="card-text">An summary document produced by the UK government detailing what
+                                businesses need to know and to meet the equality law.</p>
+                            <a href="https://assets.publishing.service.gov.uk/media/5a78dbdae5274a277e690056/business-summary.pdf"
+                                target="_blank" class="btn custom-button-outline">Equality Act 2010</a>
                         </div>
                     </div>
                 </div>
