fixing file path for images

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="/assets/images/equalities-office.webp" class="card-img-top" alt="uk government equalities office logo">
+                        <img src="assets/images/equalities-office.webp" class="card-img-top" alt="uk government equalities office logo">
                         <div class="card-body">
                             <h5 class="card-title">Equality Act 2010</h5>
                             <p class="card-text">An summary document produced by the UK government detailing what
@@ -200,7 +200,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="/assets/images/acas logo.webp" class="card-img-top" alt="acas logo">
+                        <img src="assets/images/acas logo.webp" class="card-img-top" alt="acas logo">
                         <div class="card-body">
                             <h5 class="card-title">ACAS</h5>
                             <p class="card-text">The Advisory, Conciliation and Arbitration Service.
