adjusted content for desktop responsiveness

--- a/index.html
+++ b/index.html
@@ -127,6 +127,19 @@
                 <div class="col-12 col-lg-6">
                     <div class="row">
                         <div class="col-12">
+                            <h3>Communication</h3>
+                            <ul>
+                                <li>Talk openly with all organisation members.</li>
+                                <li>Current state of the organisation meetings.</li>
+                                <li>Clear communication about changes, decisions, or plans.</li>
+                                <li>Open topic meetings to meet and ask senior staff questions.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="row">
+                        <div class="col-12">
                             <h3>Action plan</h3>
                             <ul>
                                 <li>Staff training, and what is expected from them to ensure policies work.</li>
@@ -150,19 +163,6 @@
                                     requirements.</li>
                                 <li>Consider and implement "positive action" for anyone under-represented in the
                                     organisation.</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-6">
-                    <div class="row">
-                        <div class="col-12">
-                            <h3>Communication</h3>
-                            <ul>
-                                <li>Talk openly with all organisation members.</li>
-                                <li>Current state of the organisation meetings.</li>
-                                <li>Clear communication about changes, decisions, or plans.</li>
-                                <li>Open topic meetings to meet and ask senior staff questions.</li>
                             </ul>
                         </div>
                     </div>
@@ -206,8 +206,7 @@
                             <p class="card-text">The Advisory, Conciliation and Arbitration Service.
                             </p>
                             <p class="card-text">We work with millions of employers and employees every year to improve
-                                workplace relationships. We're an independent public body that receives funding from the
-                                government.</p>
+                                workplace relationships.</p>
                             <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" target="_blank"
                                 class="btn custom-button-outline">ACAS Diversity & Inclusivity</a>
                         </div>
