--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
         <section id="intro" class="container section">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2>Introduction</h2>
+                    <h2 id="xl-hidden">Introduction</h2>
                 </div>
-                <div class="col-12 col-lg-6">
+                <!-- adds a margin top to text for xl screens -->
+                <div class="col-12 col-lg-6 col-xl-7 mt-xl-5">
+                    <h2 id="xl-visible">Introduction</h2>
                     <p>
                         Diversity and Inclusion refers to, the range of people within a group, and that everyone within
                         the group feels valued and accepted. The practices and tips on this website can help you meet
@@ -77,16 +79,26 @@
                     <p>
                         The following are the protected characteristics against discrimination:
                     </p>
-                    <ul>
-                        <li>Age</li>
-                        <li>Disability</li>
-                        <li>Gender Reassignment</li>
-                        <li>Marriage and Civil Partnership</li>
-                        <li>Pregnancy and Maternity</li>
-                        <li>Race</li>
-                        <li>Religion or Belief</li>
-                        <li>Sex</li>
-                        <li>Sexual Orientation</li>
+                    <!-- split lists into two to remove whitespace for xl screens -->
+                    <div class="row">
+                        <div class="col-12 col-xl-6">
+                            <ul>
+                                <li>Age</li>
+                                <li>Disability</li>
+                                <li>Gender Reassignment</li>
+                                <li>Marriage and Civil Partnership</li>
+                                <li>Pregnancy and Maternity</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-xl-6">
+                            <ul>
+                                <li>Race</li>
+                                <li>Religion or Belief</li>
+                                <li>Sex</li>
+                                <li>Sexual Orientation</li>
+                            </ul>
+                        </div>
+                    </div>
                     </ul>
                     <p>
                         As well as an legal requirement, diversity and inclusion practices within an organisation can
@@ -95,7 +107,7 @@
                         productive.
                     </p>
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 col-xl-5">
                     <img src="assets/images/intro-image.webp" alt="man in wheelchair handed a cup of coffee"
                         class="img-fluid img-border">
                 </div>
@@ -188,7 +200,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="assets/images/equalities-office.webp" class="card-img-top" alt="uk government equalities office logo">
+                        <img src="assets/images/equalities-office.webp" class="card-img-top"
+                            alt="uk government equalities office logo">
                         <div class="card-body">
                             <h5 class="card-title">Equality Act 2010</h5>
                             <p class="card-text">An summary document produced by the UK government detailing what
