compressed image size

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                         The following are the protected characteristics against discrimination:
                     </p>
                     <!-- split lists into two to remove whitespace for xl screens -->
+                    <!-- margin -->
                     <div class="row">
                         <div class="col-12 col-xl-6">
                             <ul>
