intro further media queries

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <!-- margin -->
                     <div class="row">
                         <div class="col-12 col-xl-6">
-                            <ul>
+                            <ul id="top-list">
                                 <li>Age</li>
                                 <li>Disability</li>
                                 <li>Gender Reassignment</li>
