adjusting hero cover text for better load times

--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
     <!-- Hero -->
     <section id="hero">
         <div id="cover-text">
-            <br>
-            <h1 class="display-3">"No culture can live, if it attempts to be exclusive.”</h1>
-            <p class="lead sub-heading-color display-6"><strong>Mahatma Gandhi</strong></p>
+            <h3>"No culture can live, if it attempts to be exclusive.”</h3>
+            <p class="lead"><strong>Mahatma Gandhi</strong></p>
         </div>
     </section>
 
