changes to meet validation

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                             </ul>
                         </div>
                     </div>
-                    </ul>
                     <p>
                         As well as an legal requirement, diversity and inclusion practices within an organisation can
                         help lower the risk of; bullying, harrassment, and discrimination. When people are valued and an
@@ -213,7 +212,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="assets/images/acas logo.webp" class="card-img-top" alt="acas logo">
+                        <img src="assets/images/acas-logo.webp" class="card-img-top" alt="acas logo">
                         <div class="card-body">
                             <h5 class="card-title">ACAS</h5>
                             <p class="card-text">The Advisory, Conciliation and Arbitration Service.
