--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diversity & Inclusion | Home</title>
 
+    <!-- meta information for SEO -->
+    <meta name="description" content="Diversity and Inclusion practices and tips for businesses and organisations.">
+    <meta name="keywords" content="Diversity, Inclusion, Equality, Discrimination, Business, Organisation">
+    <meta name="author" content="Mark Randall">
 
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
