testing deployed load time without cover text

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <section>
         <figure id="hero">
             <figcaption>A group of people in a row facing away from the camera, arms around each other.</figcaption>
-            <div id="cover-text">
+            <!-- <div id="cover-text">
                 <h3>"No culture can live, if it attempts to be exclusive.”</h3>
                 <p class="lead"><strong>Mahatma Gandhi</strong></p>
-            </div>
+            </div> -->
         </figure>
     </section>
 
