--- a/index.html
+++ b/index.html
@@ -56,14 +56,12 @@
     </nav>
 
     <!-- Hero -->
-    <section>
-        <figure id="hero">
-            <figcaption>A group of people in a row facing away from the camera, arms around each other.</figcaption>
-            <div id="cover-text">
-                <h3>"No culture can live, if it attempts to be exclusive.”</h3>
-                <p class="lead"><strong>Mahatma Gandhi</strong></p>
-            </div>
-        </figure>
+    <section id="hero">
+        <div id="cover-text"
+            aria-label="A group of people in a row facing away from the camera, arms around each other.">
+            <h3>"No culture can live, if it attempts to be exclusive.”</h3>
+            <p class="lead"><strong>Mahatma Gandhi</strong></p>
+        </div>
     </section>
 
     <!-- Main Content -->
@@ -71,19 +69,19 @@
         <!-- Intro -->
         <section id="intro" class="container section">
             <div class="row">
+                <!-- The two titles are hidden/displayed for different screen sizes -->
                 <div class="col-12 text-center">
                     <h2 id="xl-hidden">What is Diversity and Inclusion?</h2>
                 </div>
                 <!-- adds a margin top to text for xl screens -->
                 <div class="col-12 col-lg-6 col-xl-7 mt-xl-5">
                     <header>
+                        <!-- second duplicate title, xl only -->
                         <h2 id="xl-visible">What is Diversity and Inclusion?</h2>
                         <p>
                             Diversity and Inclusion refers to, the range of people within a group, and that everyone
-                            within
-                            the group feels valued and accepted. The practices and tips on this website can help you
-                            meet
-                            the legal requirements within the Equality Act and discrimination law.
+                            within the group feels valued and accepted. The practices and tips on this website can help
+                            you meet the legal requirements within the Equality Act and discrimination law.
                         </p>
                     </header>
                     <p>
