template for new diversity and inclusion pages

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="#tips">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#diversity">Diversity</a>
+                        <a class="nav-link" href="diversity.html">Diversity</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#inclusion">Inclusion</a>
+                        <a class="nav-link" href="inclusion.html">Inclusion</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#links">Links</a>
