active navbar underline

--- a/inclusion.html
+++ b/inclusion.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diversity & Inclusion | Home</title>
+    <title>Diversity & Inclusion | Inclusion</title>
 
     <!-- meta information for SEO -->
     <meta name="description" content="Diversity and Inclusion practices and tips for businesses and organisations.">
