some diversity content added

--- a/diversity.html
+++ b/diversity.html
@@ -60,7 +60,66 @@
 
         <!-- Diversity -->
         <section id="diversity" class="container section">
-            <h2>Diversity</h2>
+            <h1>Diversity</h1>
+            <h3>What is Diversity?</h3>
+            <p>
+
+            </p>
+
+            <h3>What is "Positive Action"?</h3>
+            <p>
+                <!-- AI written -->
+                Positive action under the UK Equality Act 2010 refers to measures that can be taken to help people from
+                disadvantaged or underrepresented groups compete on more equal terms, without alienating or
+                disadvantaging other groups. It allows employers and service providers to take steps to support these
+                groups, such as providing targeted training or outreach programs, without falling foul of discrimination
+                laws.
+            </p>
+            <p>
+                <!-- AI written -->
+                Positive action is intended to level the playing field and address disadvantages that certain
+                groups may face, promoting greater equality and diversity within the workplace and society.
+            </p>
+            <h5>Why should organisations implement a positive action policy?</h5>
+            <p>
+                <!-- AI written -->
+                Implementing a positive action policy can help organisations create a more diverse and inclusive
+                workplace.
+                It can address imbalances and barriers that underrepresented groups face, leading to a more equitable
+                environment.
+                Additionally, diverse teams can bring varied perspectives and ideas, fostering innovation and improving
+                decision-making.
+                A positive action policy can also enhance the organisation's reputation, making it more attractive to
+                potential employees and customers who value diversity and inclusion.
+            </p>
+
+
+            <h3>Implementing Positive Action</h3>
+            <p>
+                Organisations can implement positive action by taking the following steps:
+                <ol>
+                    <!-- AI written, and pair programmed into a list with strong elements -->
+                    <li><strong>Identify Underrepresented Groups</strong>: Conduct an analysis to identify which groups
+                        are underrepresented or disadvantaged within the organisation.</li>
+                    <li><strong>Set Clear Objectives</strong>: Define clear, measurable objectives for what the
+                        organisation aims to achieve through positive action.</li>
+                    <li><strong>Develop Targeted Programs</strong>: Create programs such as mentorship, training, and
+                        outreach initiatives specifically designed to support underrepresented groups.</li>
+                    <li><strong>Review Recruitment Practices</strong>: Ensure that job advertisements, selection
+                        criteria, and interview processes are inclusive and do not inadvertently disadvantage any group.
+                    </li>
+                    <li><strong>Provide Training</strong>: Offer training for all employees on diversity, inclusion, and
+                        the importance of positive action to foster a supportive environment.</li>
+                    <li><strong>Monitor and Evaluate</strong>: Regularly monitor the effectiveness of positive action
+                        measures and make adjustments as necessary to ensure they are meeting the set objectives.</li>
+                    <li><strong>Communicate Commitment</strong>: Clearly communicate the organisation's commitment to
+                        positive action both internally and externally to build trust and transparency.</li>
+                </ol>
+                <p>
+                    By following these steps, organisations can create a more inclusive and equitable workplace that
+                    benefits all employees.
+                </p>
+
         </section>
 
     </main>
