--- a/inclusion.html
+++ b/inclusion.html
@@ -60,7 +60,13 @@
 
         <!-- Inclusion -->
         <section id="inclusion" class="container section">
-            <h2>Inclusion</h2>
+            <h1>Inclusion</h1>
+            <h3>What is Inclusion?</h3>
+            <p>
+
+            </p>
+
+            <h3></h3>
         </section>
 
 
