--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <section id="links" class="container section">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h1>Links</h1>
+                    <h1>External Resources</h1>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
@@ -205,7 +205,7 @@
                             <p class="card-text">An summary document produced by the UK government detailing what
                                 businesses need to know and to meet the equality law.</p>
                             <a href="https://assets.publishing.service.gov.uk/media/5a78dbdae5274a277e690056/business-summary.pdf"
-                                target="_blank" class="btn custom-button-outline">Equality Act 2010</a>
+                                target="_blank" class="btn custom-button-outline">UK Equality Act 2010</a>
                         </div>
                     </div>
                 </div>
@@ -216,34 +216,37 @@
                             <h5 class="card-title">ACAS</h5>
                             <p class="card-text">The Advisory, Conciliation and Arbitration Service.
                             </p>
-                            <p class="card-text">We work with millions of employers and employees every year to improve
-                                workplace relationships.</p>
+                            <p class="card-text">This link goes over Equality, Diversity, and Inclusion. Both
+                                information and guidance for organisations.</p>
                             <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" target="_blank"
-                                class="btn custom-button-outline">ACAS Diversity & Inclusivity</a>
+                                class="btn custom-button-outline">ACAS - Diversity & Inclusivity</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="assets/images/equality-and-human-rights-commission.webp" class="card-img-top"
+                            alt="Equality and Human Rights Commission logo">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
+                            <h5 class="card-title">EHRC</h5>
+                            <p class="card-text">The Equality and Human Rights Commission.</p>
+                            <p class="card-text">This link details Positive Action for organisations, why they should
+                                use the policy and implementation advice.</p>
+                            <a href="https://www.equalityhumanrights.com/guidance/business/employers-what-positive-action-workplace"
+                                target="_blank" class="btn custom-button-outline">EHRC - Positive Action</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="assets/images/ew-group-logo.webp" class="card-img-top" alt="EW Group logo">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
+                            <h5 class="card-title">EW Group</h5>
+                            <p class="card-text">UK diversity consultancy.</p>
+                            <p class="card-text">A page that lists various inclusivity policies your organisation should
+                                have, and what they should contain.</p>
+                            <a href="https://theewgroup.com/blog/10-diversity-policies-you-need/" target="_blank"
+                                class="btn custom-button-outline">EW Group - Policies</a>
                         </div>
                     </div>
                 </div>
