--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
                     <div class="card">
                         <img src="assets/images/acas-logo.webp" class="card-img-top" alt="acas logo">
                         <div class="card-body">
-                            <h5 class="card-title">ACAS</h5>
-                            <p class="card-text">The Advisory, Conciliation and Arbitration Service.
+                            <h5 class="card-title">ACAS - Diversity & Inclusion</h5>
+                            <p class="card-text">The Advisory, Conciliation and Arbitration Service. Independent public
+                                body.
                             </p>
                             <p class="card-text">This link goes over Equality, Diversity, and Inclusion. Both
                                 information and guidance for organisations.</p>
@@ -228,8 +229,8 @@
                         <img src="assets/images/equality-and-human-rights-commission.webp" class="card-img-top"
                             alt="Equality and Human Rights Commission logo">
                         <div class="card-body">
-                            <h5 class="card-title">EHRC</h5>
-                            <p class="card-text">The Equality and Human Rights Commission.</p>
+                            <h5 class="card-title">EHRC - Positive Action</h5>
+                            <p class="card-text">UK equality and human rights regulator.</p>
                             <p class="card-text">This link details Positive Action for organisations, why they should
                                 use the policy and implementation advice.</p>
                             <a href="https://www.equalityhumanrights.com/guidance/business/employers-what-positive-action-workplace"
@@ -241,8 +242,8 @@
                     <div class="card">
                         <img src="assets/images/ew-group-logo.webp" class="card-img-top" alt="EW Group logo">
                         <div class="card-body">
-                            <h5 class="card-title">EW Group</h5>
-                            <p class="card-text">UK diversity consultancy.</p>
+                            <h5 class="card-title">EW Group - Policies</h5>
+                            <p class="card-text">UK diversity consultants.</p>
                             <p class="card-text">A page that lists various inclusivity policies your organisation should
                                 have, and what they should contain.</p>
                             <a href="https://theewgroup.com/blog/10-diversity-policies-you-need/" target="_blank"
@@ -252,13 +253,14 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="assets/images/diversity-uk.webp" class="card-img-top" alt="Diversity UK logo">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
+                            <h5 class="card-title">Diversity UK - Networks</h5>
+                            <p class="card-text">Equality charity improving diversity & inclusion in the UK.</p>
+                            <p class="card-text">The charity has a list of organisations and networks for various
+                                protected groups. (and shared characteristics)</p>
+                            <a href="https://diversityuk.org/useful-links/" target="_blank"
+                                class="btn custom-button-outline">Diversity UK - Networks</a>
                         </div>
                     </div>
                 </div>
