--- a/index.html
+++ b/index.html
@@ -266,13 +266,14 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="assets/images/business-disability-forum.webp" class="card-img-top" alt="business disability forum logo">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" target="_blank" class="btn custom-button-outline">Go somewhere</a>
+                            <h5 class="card-title">Business Disability Forum</h5>
+                            <p class="card-text">Business membership organisation in disability inclusion.</p>
+                            <p class="card-text">Inclusive Communication Toolkit, assisting in removing barriers that
+                                exclude groups from your communications. (including disabled people)</p>
+                            <a href="https://businessdisabilityforum.org.uk/resource/inclusive-communication-toolkit-2/section-1-inclusive-communication-and-business/"
+                                target="_blank" class="btn custom-button-outline">BDF - Inclusive Communication</a>
                         </div>
                     </div>
                 </div>
