tidied up text in link cards, and shuffled for better visuals

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <h5 class="card-title">Business Disability Forum</h5>
                             <p class="card-text">Business membership organisation in disability inclusion.</p>
                             <p class="card-text">Inclusive Communication Toolkit, assisting in removing barriers that
-                                exclude groups from your communications. (including disabled people)</p>
+                                exclude groups from your communications.</p>
                             <a href="https://businessdisabilityforum.org.uk/resource/inclusive-communication-toolkit-2/section-1-inclusive-communication-and-business/"
                                 target="_blank" class="btn custom-button-outline">BDF - Inclusive Communication</a>
                         </div>
