--- a/index.html
+++ b/index.html
@@ -240,6 +240,19 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
+                        <img src="assets/images/business-disability-forum.webp" class="card-img-top" alt="business disability forum logo">
+                        <div class="card-body">
+                            <h5 class="card-title">Business Disability Forum</h5>
+                            <p class="card-text">Business membership organisation in disability inclusion.</p>
+                            <p class="card-text">Inclusive Communication Toolkit, assisting in removing barriers that
+                                exclude groups from your communications.</p>
+                            <a href="https://businessdisabilityforum.org.uk/resource/inclusive-communication-toolkit-2/section-1-inclusive-communication-and-business/"
+                                target="_blank" class="btn custom-button-outline">BDF - Communication</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
                         <img src="assets/images/ew-group-logo.webp" class="card-img-top" alt="EW Group logo">
                         <div class="card-body">
                             <h5 class="card-title">EW Group - Policies</h5>
@@ -261,19 +274,6 @@
                                 protected groups. (and shared characteristics)</p>
                             <a href="https://diversityuk.org/useful-links/" target="_blank"
                                 class="btn custom-button-outline">Diversity UK - Networks</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="assets/images/business-disability-forum.webp" class="card-img-top" alt="business disability forum logo">
-                        <div class="card-body">
-                            <h5 class="card-title">Business Disability Forum</h5>
-                            <p class="card-text">Business membership organisation in disability inclusion.</p>
-                            <p class="card-text">Inclusive Communication Toolkit, assisting in removing barriers that
-                                exclude groups from your communications.</p>
-                            <a href="https://businessdisabilityforum.org.uk/resource/inclusive-communication-toolkit-2/section-1-inclusive-communication-and-business/"
-                                target="_blank" class="btn custom-button-outline">BDF - Inclusive Communication</a>
                         </div>
                     </div>
                 </div>
